[gd_scene load_steps=3 format=1]

[ext_resource path="res://Card/Card.gd" type="Script" id=1]
[ext_resource path="res://UI/gui_helper.png" type="Texture" id=2]

[node name="PanelContainer" type="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 20.6176
margin/top = 35.1988
margin/right = 134.0
margin/bottom = 337.0
script/script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 107.0
margin/bottom = 335.0
columns = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 7.0
margin/top = 7.0
margin/right = 107.0
margin/bottom = 335.0
alignment = 0

[node name="top" type="TextureFrame" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 20 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 20.0
texture = ExtResource( 2 )
modulate = Color( 1, 0.0390625, 0.0390625, 1 )
expand = true
stretch_mode = 0

[node name="x" type="Button" parent="VBoxContainer/top"]

anchor/left = 1
anchor/top = 3
anchor/bottom = 3
rect/min_size = Vector2( 20, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 10.0
margin/right = 0.0
margin/bottom = -10.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x"
flat = false

[node name="image" type="TextureFrame" parent="VBoxContainer"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 100.0
margin/bottom = 124.0
texture = ExtResource( 2 )
modulate = Color( 0.101562, 0, 1, 1 )
expand = true
stretch_mode = 0

[node name="VButtonArray" type="VBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 128.0
margin/right = 100.0
margin/bottom = 328.0
alignment = 0

[node name="ButtonsGroup" type="ButtonGroup" parent="VBoxContainer/VButtonArray"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 200.0
alignment = 0

[node name="Button" type="Button" parent="VBoxContainer/VButtonArray/ButtonsGroup"]

visibility/visible = false
rect/min_size = Vector2( 100, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 20.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
flat = false

[connection signal="button_down" from="VBoxContainer/top/x" to="." method="_on_close"]

[connection signal="button_selected" from="VBoxContainer/VButtonArray/ButtonsGroup" to="." method="_on_Option_button_selected"]


